Update paper and ignore files

--- a/paper.qmd
+++ b/paper.qmd
@@ -2,7 +2,7 @@
 title: "Final Submission Braess Edge Detection"
 author: "Alex Thornton"
 date: "2024-05-15"
-output: pdf_document
+format: gfm
 ---
 
 
